domd,doma: use two network interfaces
With android 15, virtwifi will be enabled. It will use first
network interface. The second one will be used for adb transport.

Signed-off-by: Andrii Chepurnyi <andrii_chepurnyi@epam.com>
Acked-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/layers/meta-xt-dom0-gen3/recipes-guests/doma/files/doma-vdevices-virtio.cfg
+++ b/layers/meta-xt-dom0-gen3/recipes-guests/doma/files/doma-vdevices-virtio.cfg
@@ -9,12 +9,15 @@ virtio=[
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:04.0, grant_usage=0, backend_type=qemu',
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:05.0, grant_usage=0, backend_type=qemu',
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:06.0, grant_usage=0, backend_type=qemu',
-'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:07.0, grant_usage=0, backend_type=qemu'
+'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:07.0, grant_usage=0, backend_type=qemu',
+'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:08.0, grant_usage=0, backend_type=qemu'
 ]
 
 device_model_args=[
 '-device', 'virtio-net-pci,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=1,romfile=,id=nic0,netdev=net0,mac=08:00:27:ff:cb:ce',
 '-netdev', 'type=tap,id=net0,ifname=vif-emu,br=xenbr0,script=no,downscript=no,vhost=on',
+'-device', 'virtio-net-pci,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=8,romfile=,id=nic1,netdev=net1,mac=08:00:27:ff:cb:cf',
+'-netdev', 'type=tap,id=net1,ifname=vif-emu1,script=no,downscript=no,vhost=on',
 '-device', 'virtio-mouse-pci,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=2',
 '-audiodev', 'alsa,id=snd0,out.dev=default',
 '-device', 'virtio-snd-pci,audiodev=snd0,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=3',
