doma_kernel: Handle the SCM Version
Handle the SCM version for the Android kernel by
adding --config=stamp. For more information, see the documentation:
https://android.googlesource.com/kernel/build/+/refs/heads/main/kleaf/docs/scmversion.md

Signed-off-by: Andrii Chepurnyi <andrii_chepurnyi@epam.com>
Acked-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -323,6 +323,7 @@ components:
       tool: "tools/bazel"
       command: run
       args:
+        - "--config=stamp"
         - "--verbose_failures"
         - "--sandbox_debug"
       target: "%{ANDROID_KERNEL_BUILD_CONFIG}"
