--- a/layers/meta-xt-dom0-gen3/recipes-guests/doma/files/virtio.cfg
+++ b/layers/meta-xt-dom0-gen3/recipes-guests/doma/files/virtio.cfg
@@ -1,4 +1,4 @@
-extra = "loglevel=0 init=/init ro rootwait console=hvc0 cma=256M androidboot.vendor.vehiclehal.server.cid=2 androidboot.vendor.vehiclehal.server.port=9210 androidboot.vendor.vehiclehal.server.psf=/data/data/power.file androidboot.vendor.vehiclehal.server.pss=/data/data/power.socket androidboot.selinux=permissive androidboot.hardware.gralloc=minigbm androidboot.hardware.hwcomposer=drm_minigbm androidboot.hardware.egl=mesa androidboot.boot_devices=33000000.pcie androidboot.fstab_suffix=trout androidboot.hardware=xenvm_trout androidboot.selinux=permissive androidboot.android_dt_dir=/proc/device-tree/firmware#1/android/"
+extra = "loglevel=0 init=/init ro rootwait console=hvc0 cma=256M"
 
 device_tree = "/usr/lib/xen/boot/doma.dtb"
 
