--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -11,7 +11,6 @@ variables:
   DOMU_MACHINE: "virtio-armv8-xt"
   ANDROID_KERNEL_DIR: "android_kernel"
   DOMA_DIR: "android"
-  DOMZ_DIR: "zephyr"
   BUILD_TARGET_DOMD: "core-image-weston"
   BUILD_TARGET_DOMU: "core-image-weston"
   XT_DOMD_DTB_NAME: "%{SOC_FAMILY}-%{DOMD_MACHINE}-domd.dtb"
@@ -23,9 +22,6 @@ variables:
   XT_DOMA_TAG: ""
   XT_DOMA_KERNEL_EXTRA_MODULES: ""
   XT_DOMA_SOURCE_GROUP: ""
-  XT_DOMZ_TAG: ""
-  # For this product we use one config for all machines for Zephyr
-  XT_DOMZ_CONFIG_NAME: "domz-generic.cfg"
   XT_MULTIMEDIA_EVA_DIR : ""
   XT_PREBUILT_GSX_DIR: ""
   XT_USE_DDK1_11: "0"
@@ -153,7 +149,7 @@ components:
         - [XT_DOMD_CONFIG_NAME, "%{XT_DOMD_CONFIG_NAME}"]
         - [XT_DOMD_DTB_NAME, "%{XT_DOMD_DTB_NAME}"]
         - [XT_DOM_NAME, "dom0"]
-        - [XT_GUEST_INSTALL, "%{XT_GENERIC_DOMU_TAG} %{XT_DOMA_TAG} %{XT_DOMZ_TAG} domd"]
+        - [XT_GUEST_INSTALL, "%{XT_GENERIC_DOMU_TAG} %{XT_DOMA_TAG} domd"]
 
         # Disable HWDB which quite huge (around 15MB) and is not required at all
         - [BAD_RECOMMENDATIONS:append, " udev-hwdb"]
@@ -228,7 +224,7 @@ components:
         - [XT_DOM_NAME, "domd"]
         - [XT_OP_TEE_FLAVOUR, "%{XT_OP_TEE_FLAVOUR}"]
         - [XT_DEVICE_TREES, "%{XT_DOMD_DTB_NAME} %{XT_DOMA_DTB_NAME} %{XT_XEN_DTB_NAME}"]
-        - [XT_GUEST_INSTALL, "%{XT_GENERIC_DOMU_TAG} %{XT_DOMA_TAG} %{XT_DOMZ_TAG}"]
+        - [XT_GUEST_INSTALL, "%{XT_GENERIC_DOMU_TAG} %{XT_DOMA_TAG}"]
         # Machine feature 'multimedia' is used to enable (VSP in domd) and (LOSSY build option in ATF)
         - [MACHINE_FEATURES:append, " multimedia"]
 
@@ -362,17 +358,6 @@ components:
         - "out/target/product/%{ANDROID_DEVICE}/super.img"
       additional_deps:
         - "../%{ANDROID_KERNEL_DIR}/%{ANDROID_KERNEL_DEPLOY_DIR}/Image"
-
-  zephyr:
-    build-dir: "%{DOMZ_DIR}"
-    sources:
-      - type: west
-    builder:
-      type: zephyr
-      board: xenvm
-      target: zephyr/samples/synchronization
-      target_images:
-        - "zephyr/build/zephyr/zephyr.bin"
 
   pack-ipl:
     build-dir: "."
@@ -652,26 +637,6 @@ parameters:
                 type: raw_image
                 gpt_type: 0FC63DAF-8483-4772-8E79-3D69D8477DE4 # Linux filesystem data
                 image_path: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/%{BUILD_TARGET_DOMU}-%{DOMU_MACHINE}.ext4"
-
-  ENABLE_ZEPHYR:
-    desc: "Build Zephyr as guest domain"
-    "no":
-      default: true
-    "yes":
-      overrides:
-        variables:
-          XT_DOMZ_TAG: "domz"
-        components:
-          dom0:
-            builder:
-              conf:
-                - [XT_DOMZ_CONFIG_NAME, "%{XT_DOMZ_CONFIG_NAME}"]
-              additional_deps:
-                # paths relative to dom0 build-dir
-                - "../%{DOMZ_DIR}/zephyr/build/zephyr/zephyr.bin"
-              external_src:
-                # path relative to folder containing build.ninja
-                domz: "%{DOMZ_DIR}/zephyr/build/zephyr"
 
   ENABLE_MM:
     desc: "Enable Multimedia support"
