--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -46,7 +46,7 @@ common_data:
       rev: "101f6a449ee237e3125a006e4a80196a2c70e949" # kirkstone
     - type: git
       url: https://github.com/xen-troops/meta-xt-rcar.git
-      rev: "abc6c8bae27293ca2d04c7810006df4bb984cf8f" # master
+      rev: "f5b31e9cb4e3521bece7f3f1dd7473c60a17df7a" # kirkstone
   # Common configuration options for all yocto-based domains
   conf: &COMMON_CONF
     - [SSTATE_DIR, "${TOPDIR}/../common_data/sstate"]
